fix portrait display on mobile

--- a/css/agency.css
+++ b/css/agency.css
@@ -283,7 +283,7 @@ header {
 }
 
 header .intro-text {
-    padding-top: 400px;
+    padding-top: 350px;
     padding-bottom: 50px;
     color: #fff;
 }
@@ -343,7 +343,7 @@ header .intro-text .intro-heading {
 
 @media(min-width:768px){
     header .intro-text {
-        padding-top: 230px;
+        padding-top: 430px;
         padding-bottom: 200px;
     }
 
